# events-gen

./: PLAN.md  README.md  pyproject.toml
config/: cities.yaml  event_types.yaml
scripts/: lint.sh  run.sh  smoke.py  test.sh
src/events_gen/: __init__.py  cli.py  models.py  pipeline.py  registry.py  scheduler.py  settings.py  storage.py  timewindow.py
src/events_gen/content/: builder.py  captions.py  clip_cache.py  jamendo.py  music.py  openverse_audio.py  video_clips.py  wikimedia_video.py
src/events_gen/content/images/: __init__.py  ai_provider.py  base.py  mock_provider.py  resize.py  venue.py
src/events_gen/publish/: __init__.py  _http.py  base.py  hosting.py  instagram.py  youtube.py
src/events_gen/render/: __init__.py  animations.py  cards.py  formats.py  preview.py  themes.py  video.py
src/events_gen/sources/: aggregator.py  base.py  cache.py  eventbrite.py  http_api.py  mock.py  predicthq.py  scraper.py  seatgeek.py  ticketmaster.py
src/events_gen/ui/: app.py  geocoding.py  jobs.py  picker.py
tests/: test_aggregator.py  test_animations.py  test_auto_music.py  test_clip_cache.py  test_content.py  test_destinations.py  test_hardening.py  test_image_quality.py  test_models.py  test_multi_city.py  test_openverse_audio.py  test_picker.py  test_pipeline.py  test_preview.py  test_publish.py  test_publish_polish.py  test_registry.py  test_render.py  test_scheduler.py  test_settings.py  test_smart_background.py  test_sources.py  test_storage.py  test_theme_previews.py  test_themes.py  test_timewindow.py  test_ui_jobs.py  test_video_clips.py  test_wikimedia_video.py
