[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "events-gen"
version = "0.1.0"
description = "Discover city events and generate social videos for YouTube and Instagram"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Arjun Choudhry" }]

dependencies = [
    # config & models
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    # http & resilience
    "httpx>=0.27",
    "tenacity>=8.2",
    # llm (captions) — Gemini (free tier) or Anthropic (paid); either is optional at runtime
    "anthropic>=0.39",
    "google-genai>=1.0",
    # media
    "moviepy>=2.0",
    "Pillow>=10.2",
    # scheduling
    "APScheduler>=3.10",
    # ui
    "streamlit>=1.33",
]

[project.optional-dependencies]
publish = [
    "google-api-python-client>=2.120",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]
scrape = [
    "selectolax>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
]

[project.scripts]
events-gen = "events_gen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
packages = ["events_gen"]
mypy_path = "src"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Don't type-check into third-party packages (some ship 3.12-only stub syntax).
[[tool.mypy.overrides]]
module = ["numpy.*", "moviepy.*", "PIL.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

# Google API client libraries are untyped; treat their calls as untyped-ok.
[[tool.mypy.overrides]]
module = ["google.*", "google_auth_oauthlib.*", "googleapiclient.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
